quite fix for an alignment bug

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -97,7 +97,7 @@
                 width: 0;
                 height: 0;
                 border-left: 0px solid transparent;
-                border-right: 22px solid transparent;
+                border-right: 25px solid transparent;
                 border-bottom: 44px solid #838283;
                 right: -21px;
                 top: 0px;
